2004-06-25 13:46  sisoft

	* debian/examples, src/call.c, src/mailer.h, src/main.c,
	  src/session.c, stuff/Makefile.am, stuff/fts-0001, stuff/test.pl,
	  stuff/freebsd/Makefile, stuff/freebsd/pkg-plist:

	change option '-a'.
	remove stuff/fts-001.

2004-06-24 13:53  sisoft

	* src/: flaglex.l, session.c, slists.c, slists.h:

	add lost files slists.[ch].
	remove unused /tmp/qpkt*.pkt's.

2004-06-23 21:59  sisoft

	* Changes, qico.conf.sample, debian/control, src/Makefile.am,
	  src/config.c, src/flagexp.y, src/flaglex.l, src/ftn.c, src/ftn.h,
	  src/perl.c, src/session.c, src/tools.c, src/tools.h,
	  stuff/test.pl:

	now show remote time in node info again (was buggy local).
	add support for defines in config (see conf.sample).

2004-06-22 18:26  sisoft

	* qico.conf.sample, src/config.c, src/flagexp.y, src/flaglex.l,
	  src/perl.c, src/qconf.x, src/tools.h, src/x2c.awk, stuff/test.pl:

	fix parse short time expressions, such as 'time 1-2'.
	perl: add function qexpr(string) - test qico expression.
	perl: speedup execute and support for END perl blocks.

2004-06-22 12:28  sisoft

	* src/: config.c, flagexp.y, perl.c, qconf.x, tty.c, tty.h:

	check for some keywords not placed inside if-expressions.
	fix chat with modem.

2004-06-21 01:34  sisoft

	* src/flagexp.y:

	fix compiling.

2004-06-21 01:30  sisoft

	* autogen.sh, src/flagexp.y, src/flaglex.l:

	fix pasring solid expressions.

2004-06-20 22:50  sisoft

	* autogen.sh, src/perl.c:

	perl: fix error, if 'perlfile' undefined or not exist.

2004-06-20 02:29  sisoft

	* Changes, Makefile.am, README, configure.in, src/main.c,
	  src/modem.c, src/tty.c, src/tty.h:

	fix timeouts.

2004-06-17 00:24  sisoft

	* src/binkp.c, src/mailer.h, src/perl.c, src/protfm.c,
	  src/session.c, stuff/test.pl:

	perl: fix on_session and implement on_recv/end_recv/on_send/end_send hooks.

2004-06-16 10:22  sisoft

	* debian/copyright, src/mailer.h, src/perl.c, src/session.c,
	  stuff/test.pl:
