@@ -1,9 +1,8 @@
-/* $Id: TodayFixes,v 1.96 2004/06/30 09:09:41 sisoft Exp $ */
+/* $Id: TodayFixes,v 1.97 2004/07/07 08:58:32 sisoft Exp $ */
 ---
-show remote time in local timezone.
+fix compile with perl 5.6.
 .
 previous:
 ---
-change option '-a'.
-remove stuff/fts-001.
+show remote time in local timezone.
 .
